--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jasmine --config=spec/support/unit.json",
     "test:integration": "jasmine --config=spec/support/integration.json",
+    "test:integration:gtm": "DATABASE=gtm jasmine --config=spec/support/integration.json",
+    "test:integration:cache": "DATABASE=cache jasmine --config=spec/support/integration.json",
     "coverage:unit": "nyc --reporter=html --reporter=text jasmine --config=spec/support/unit.json",
     "coverage:integration": "nyc --reporter=html --reporter=text jasmine --config=spec/support/integration.json",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
@@ -44,14 +46,18 @@
     ]
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
-    "dotenv": "^4.0.0",
-    "jasmine": "^2.8.0",
+    "coveralls": "^3.0.2",
+    "dotenv": "^6.0.0",
+    "jasmine": "^3.1.0",
     "jasmine-spec-reporter": "^4.1.1",
-    "jasmine-spy-matchers": "^1.2.0",
+    "jasmine-spy-matchers": "^2.1.0",
     "jshint": "^2.9.5",
-    "nyc": "^11.2.1",
+    "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
-    "rewire": "^2.5.2"
+    "rewire": "^4.0.1"
+  },
+  "optionalDependencies": {
+    "ewd-memory-globals": "^1.0.2",
+    "nodem": "^0.9.2"
   }
 }
