--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "url": "https://github.com/robtweed/ewd-document-store/issues"
   },
   "engines": {
-    "node": ">= 0.10",
-    "npm": ">= 2.15"
+    "node": ">= 4"
   },
   "repository": {
     "type": "git",
