--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "test:integration": "jasmine --config=spec/support/integration.json",
     "test:integration:gtm": "DATABASE=gtm jasmine --config=spec/support/integration.json",
     "test:integration:cache": "DATABASE=cache jasmine --config=spec/support/integration.json",
+    "test:integration:redis": "DATABASE=redis jasmine --config=spec/support/integration.json",
     "coverage:unit": "nyc --reporter=html --reporter=text jasmine --config=spec/support/unit.json",
-    "coverage:integration": "nyc --reporter=html --reporter=text jasmine --config=spec/support/integration.json",
-    "coverage:integration:gtm": "DATABASE=gtm nyc --reporter=html --reporter=text jasmine --config=spec/support/integration.json",
-    "coverage:integration:cache": "DATABASE=cache nyc --reporter=html --reporter=text jasmine --config=spec/support/integration.json",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "validate": "npm ls"
+    "coverage:integration": "nyc --reporter=html --reporter=text npm run test:integration",
+    "coverage:integration:gtm": "nyc --reporter=html --reporter=text npm run test:integration:gtm",
+    "coverage:integration:cache": "nyc --reporter=html --reporter=text npm run test:integration:cache",
+    "coverage:integration:redis": "nyc --reporter=html --reporter=text npm run test:integration:redis",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "pre-commit": [
     "lint",
@@ -41,21 +42,20 @@
     "all": true,
     "include": [
       "lib/**/*.js"
-    ],
-    "exclude": [
-      "spec/**/*.js"
     ]
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
-    "ewd-memory-globals": "^1.0.2",
-    "dotenv": "^6.0.0",
-    "jasmine": "^3.1.0",
+    "dotenv": "^6.1.0",
+    "ewd-memory-globals": "1.0.2",
+    "ewd-redis-globals": "^0.5.0",
+    "jasmine": "^3.2.0",
     "jasmine-spec-reporter": "^4.1.1",
     "jasmine-spy-matchers": "^2.1.0",
-    "jshint": "^2.9.5",
-    "nyc": "^12.0.2",
+    "jshint": "^2.9.6",
+    "nyc": "^13.0.1",
     "pre-commit": "^1.2.2",
-    "rewire": "^4.0.1"
+    "rewire": "^4.0.1",
+    "tcp-netx": "^1.0.7-a"
   }
 }
