--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "devDependencies": {
     "coveralls": "^3.0.2",
     "dotenv": "^6.1.0",
-    "ewd-memory-globals": "1.0.2",
+    "ewd-memory-globals": "^1.0.3",
     "ewd-redis-globals": "^0.5.0",
     "jasmine": "^3.2.0",
     "jasmine-spec-reporter": "^4.1.1",
