--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ewd-document-store",
-  "version": "1.24.2",
+  "version": "2.1.1",
   "config": {
-    "date": "22 August 2019"
+    "date": "14 November 2019"
   },
   "description": "Persistent JavaScript Objects and Document Database using Global Storage",
   "author": "Rob Tweed, M/Gateway Developments Ltd",
@@ -42,6 +42,9 @@
     "exclude": [
       "spec/**/*.js"
     ]
+  },
+  "dependencies": {
+    "sax": ""
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
